2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore): Patch from
	Marek Schmidt <xschmi01@stud.fit.vutbr.cz> to fix restoring the
	session. The playlist expects URI, we fed it a local filename
	(Closes: Debian #399983)

============ Version 2.16.3

2006-11-14  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.3

2006-11-09  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Patch from Lubomir Marinov to make the "Zoom
	1:2", etc. menu items work again by not setting the width and height
	request on the video widget (Closes: #351798)

2006-10-30  Bastien Nocera  <hadess@hadess.net>

	* COPYING: fix typo spotted by Alexander Bostrom (Closes: #366278)

2006-10-29  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(my_gnome_vfs_get_mime_type_with_data): initialise bytes_read
	to avoid problems with gnome-vfs not initialising it
	(See bug #366331)

2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-mozilla-viewer.c: (on_error_event),
	(totem_embedded_add_children):
	  Catch errors that occur after we initiated playback (#361787).

2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb),
	(bacon_video_widget_open_with_subtitle), (bacon_video_widget_play):
	  Don't go through lots of trouble to catch errors and fake non-async
	  behaviour to the frontend when the frontend doesn't even check for
	  errors. In other words: skip poll_for_state_change() and handle
	  errors asynchroneously if the frontend supplies a NULL error,
	  otherwise errors may be lost in some corner cases (#361787).

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free): close the dbus connection
	before unref'ing it when we have a private connection (Closes: #365265)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>
