@@ -1,3 +1,13 @@
+2006-11-24  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-sidebar.c: (totem_sidebar_setup):
+	* src/totem.c: (totem_action_save_state),
+	(main_pane_size_allocated), (totem_setup_window),
+	(video_widget_create): Patch from Jan Arne Petersen
+	<jpetersen@jpetersen.org> to make Totem remember the width
+	of the sidebar even when Totem was maximised when we exited
+	(Closes: #365211, #361800, #316286)
+
 2006-11-23  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-session.c: (totem_session_restore): Patch from
